[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Style/Button/PauseButtonGroup.tres" type="ButtonGroup" id=1]
[ext_resource path="res://Scenes/Main/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://Resources/Style/Button/ButtonFocus.gd" type="Script" id=4]
[ext_resource path="res://Resources/Style/Panel/DialoguePanel.tres" type="StyleBox" id=5]
[ext_resource path="res://Resources/Style/Theme.tres" type="Theme" id=7]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.176471, 0.207843, 0.2, 0.647059 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.275
anchor_top = 0.05
anchor_right = 0.725
anchor_bottom = 0.95
margin_left = -0.360046
margin_top = 0.279995
margin_right = 0.159912
margin_bottom = 0.0799561
theme = ExtResource( 7 )
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Center" type="CenterContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="Panel/Center"]
margin_left = 254.0
margin_top = 49.0
margin_right = 609.0
margin_bottom = 922.0
theme = ExtResource( 7 )

[node name="CenterSave" type="CenterContainer" parent="Panel/Center/Options"]
margin_right = 355.0
margin_bottom = 51.0

[node name="Save" type="Button" parent="Panel/Center/Options/CenterSave"]
margin_left = 44.0
margin_right = 311.0
margin_bottom = 51.0
group = ExtResource( 1 )
text = "Save Game"
script = ExtResource( 4 )

[node name="CenterLoad" type="CenterContainer" parent="Panel/Center/Options"]
margin_top = 86.0
margin_right = 355.0
margin_bottom = 137.0

[node name="Load" type="Button" parent="Panel/Center/Options/CenterLoad"]
margin_left = 45.0
margin_right = 309.0
margin_bottom = 51.0
group = ExtResource( 1 )
text = "Load Game"
script = ExtResource( 4 )

[node name="HSeparatorTop" type="HSeparator" parent="Panel/Center/Options"]
margin_top = 172.0
margin_right = 355.0
margin_bottom = 247.0
theme = ExtResource( 7 )

[node name="CenterFullscreen" type="CenterContainer" parent="Panel/Center/Options"]
margin_top = 282.0
margin_right = 355.0
margin_bottom = 333.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="CheckButton" parent="Panel/Center/Options/CenterFullscreen"]
margin_left = 14.0
margin_right = 341.0
margin_bottom = 51.0
size_flags_horizontal = 0
theme = ExtResource( 7 )
toggle_mode = false
group = ExtResource( 1 )
text = "Fullscreen"
script = ExtResource( 4 )

[node name="CenterRes" type="CenterContainer" parent="Panel/Center/Options"]
margin_top = 368.0
margin_right = 355.0
margin_bottom = 419.0

[node name="ResolutionOption" type="OptionButton" parent="Panel/Center/Options/CenterRes"]
margin_left = 37.0
margin_right = 318.0
margin_bottom = 51.0
size_flags_horizontal = 0
group = ExtResource( 1 )
text = "Resolution"
script = ExtResource( 4 )

[node name="CenterSettings" type="CenterContainer" parent="Panel/Center/Options"]
margin_top = 454.0
margin_right = 355.0
margin_bottom = 505.0

[node name="MoreSettings" type="Button" parent="Panel/Center/Options/CenterSettings"]
margin_left = 2.0
margin_right = 352.0
margin_bottom = 51.0
group = ExtResource( 1 )
text = "More Settings..."
script = ExtResource( 4 )

[node name="HSeparatorBottom" type="HSeparator" parent="Panel/Center/Options"]
margin_top = 540.0
margin_right = 355.0
margin_bottom = 615.0
theme = ExtResource( 7 )

[node name="CenterCancel" type="CenterContainer" parent="Panel/Center/Options"]
margin_top = 650.0
margin_right = 355.0
margin_bottom = 701.0

[node name="Cancel" type="Button" parent="Panel/Center/Options/CenterCancel"]
margin_left = 88.0
margin_right = 267.0
margin_bottom = 51.0
group = ExtResource( 1 )
text = "Cancel"
script = ExtResource( 4 )

[node name="CenterMenu" type="CenterContainer" parent="Panel/Center/Options"]
margin_top = 736.0
margin_right = 355.0
margin_bottom = 787.0

[node name="Menu" type="Button" parent="Panel/Center/Options/CenterMenu"]
margin_left = 53.0
margin_right = 301.0
margin_bottom = 51.0
group = ExtResource( 1 )
text = "Main Menu"
script = ExtResource( 4 )

[node name="CenterQuit" type="CenterContainer" parent="Panel/Center/Options"]
margin_top = 822.0
margin_right = 355.0
margin_bottom = 873.0

[node name="Quit" type="Button" parent="Panel/Center/Options/CenterQuit"]
margin_right = 355.0
margin_bottom = 51.0
group = ExtResource( 1 )
text = "Quit to desktop"
script = ExtResource( 4 )
